<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.0</version>
        <relativePath /> <!-- lookup parent from repository -->
    </parent>

    <groupId>de.skuzzle.cmp</groupId>
    <artifactId>cmp-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>cmp-parent</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- passed by commandline to have the properties replaced within the deploy-settings.xml for deploying artifacts to GitHub package registry. -->
        <username>${deploy.username}</username>
        <password>${deploy.password}</password>

        <!-- Injected into spring boot properties for being displayed on ui and metrics -->
        <application.version.number>${project.version}</application.version.number>

        <!-- Java compiler/jvm Arguments -->
        <enable-preview>--enable-preview</enable-preview>

        <!-- Runtime / Tools Versions -->
        <java.version>15</java.version>
        <node.version>v12.16.2</node.version>
        <npm.version>6.14.4</npm.version>

        <!-- Dependency Versions -->
        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
        <spring-metrics.version>0.5.1.RELEASE</spring-metrics.version>
        <spring-mobile-device.version>2.0.0.M3</spring-mobile-device.version>
        <resilience4j.version>1.6.1</resilience4j.version>
        <guava.version>28.2-jre</guava.version>
        <equalsverifier.version>3.1.13</equalsverifier.version>
        <logstash-encoder.version>6.3</logstash-encoder.version>
        <josejwt.version>8.11</josejwt.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub skuzzle Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/skuzzle/cmp</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub skuzzle Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/skuzzle/cmp</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </pluginRepository>
    </pluginRepositories>

    <modules>
        <!-- Domain -->
        <!-- Counter -->
        <module>counter/domain</module>
        <module>counter/rest</module>
        <module>counter/frontend</module>

        <!-- Collaborative Order -->
        <module>collaborativeorder/domain</module>

        <!-- Users -->
        <module>users/domain</module>
        <module>users/authorization-server</module>
        <module>users/rest</module>

        <!-- Common -->
        <module>common/rest-auth</module>
        <module>common/frontend-auth</module>
        <module>common/http</module>
        <module>common/collections</module>
        <module>common/random</module>
        <module>common/spring-boot</module>
        <module>common/time</module>

        <!-- UI -->
        <module>ui/fragments</module>

        <!-- Application -->
        <module>application/backend-server</module>
        <module>application/frontend-server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Import -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- common -->
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>rest-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>frontend-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>collections</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>random</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>time</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.common</groupId>
                <artifactId>spring-boot</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- counter -->
            <dependency>
                <groupId>de.skuzzle.cmp.counter</groupId>
                <artifactId>counter-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.counter</groupId>
                <artifactId>counter-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.counter</groupId>
                <artifactId>counter-rest</artifactId>
                <version>${project.version}</version>
                <classifier>stubs</classifier>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.counter</groupId>
                <artifactId>counter-frontend</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- collaborativeorder -->
            <dependency>
                <groupId>de.skuzzle.cmp.collaborativeorder</groupId>
                <artifactId>collaborativeorder-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.collaborativeorder</groupId>
                <artifactId>collaborativeorder-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.collaborativeorder</groupId>
                <artifactId>collaborativeorder-frontend</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Users -->
            <dependency>
                <groupId>de.skuzzle.cmp.users</groupId>
                <artifactId>users-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.users</groupId>
                <artifactId>users-rest</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.skuzzle.cmp.users</groupId>
                <artifactId>users-security</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- UI -->
            <dependency>
                <groupId>de.skuzzle.cmp.ui</groupId>
                <artifactId>fragments</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 3rd party -->
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>nl.jqno.equalsverifier</groupId>
                <artifactId>equalsverifier</artifactId>
                <scope>test</scope>
                <version>${equalsverifier.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot2</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-circuitbreaker</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-timelimiter</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.metrics</groupId>
                <artifactId>spring-metrics</artifactId>
                <version>${spring-metrics.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.mobile</groupId>
                <artifactId>spring-mobile-device</artifactId>
                <version>${spring-mobile-device.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-jwt</artifactId>
                <version>${spring-security-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${josejwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.florianlopes</groupId>
                <artifactId>spring-mvc-test-utils</artifactId>
                <version>2.2.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <compilerArgs>
                            ${enable-preview}
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <argLine>${enable-preview}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <parameters>true</parameters>
                        <argLine>${enable-preview}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-contract-maven-plugin</artifactId>
                    <version>2.2.3.RELEASE</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>2.4.0</version>
                    <configuration>
                        <from>
                            <image>openjdk:${java.version}</image>
                        </from>
                        <to>
                            <image>docker.pkg.github.com/skuzzle/cmp/${project.artifactId}</image>
                            <auth>
                                <username>${deploy.username}</username>
                                <password>${deploy.password}</password>
                            </auth>
                            <tags>
                                <tag>${project.version}</tag>
                                <tag>latest</tag>
                            </tags>
                        </to>
                        <container>
                            <jvmFlags>
                                <jvmFlag>${enable-preview}</jvmFlag>
                                <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
                                <jvmFlag>-XX:+UseJVMCICompiler</jvmFlag>
                                <jvmFlag>-XX:MaxRAMPercentage=70.0</jvmFlag>
                            </jvmFlags>
                        </container>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
